dhall/tests/type-inference/failure/unit/RecordSelectionEmpty.txt
Type error: error: MissingRecordField
 --> <current file>:1:0
  |
1 | {=}.x
  | ^^^^^ MissingRecordField
  |
